<resources>
    <string name="app_name" translatable="false">LibArab</string>
    <string name="facebook_app_id">383454102043368</string>a
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="aboutTrivia2">About</string>
    <string name="aboutTrivia">There are two options for the game, the user can create a quiz of 5 questions, or he can solve an existed quiz of 5 questions and gets 3 points for each correct answer. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="about_details">This app gives you access to The Israeli National Library Archive. Mainly to the The Library’s Islam and Middle East Collection. The collection contains thousands of books, a wide selection of early-twentieth-century newspapers, and some 200 contemporary periodicals and newspapers in Arabic, Persian and Turkish. The collection also houses a rich repository of approximately 2,000 Arabic and Persian manuscripts.</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_continue_as_a_guest">Continue as a guest</string>
    <string name="have_account">"Don't have an account?"</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="text_sign_up2"><u>Sign up.</u></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="menu_search">Search</string>
    <string name="menu_bibliography">Bibliography</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_trivia">Trivia</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="profile_user_name">User Name</string>
    <string name="profile_user_email" translatable="false">useremail@gmail.com</string>
    <string name="profile_first_name">First Name:</string>
    <string name="profile_last_name">Last Name:</string>
    <string name="profile_age">Age:</string>
    <string name="profile_gender">Gender:</string>
    <string name="profile_game_score">Game Score:</string>
    <string name="search_title">Title:   </string>
    <string name="search_from_year">From year:   </string>
    <string name="search_to_year">To year:   </string>
    <string name="search_enter_title">Enter Title</string>
    <string name="search_enter_from_year">Enter From Year</string>
    <string name="search_enter_to_year">Enter To Year</string>
    <string name="search_choose">Choose</string>
    <string name="search_creation_date">Creation Date:  </string>
    <string name="search_author">Author:    </string>
    <string name="search_publisher">Publisher:  </string>
    <string name="settings_chose_lang">Click To Choose Language</string>
    <string name="settings_lang">Language</string>
    <string name="no_pages_error">No scanned version of this item</string>
    <string name="jump_to_page">Jump To Page</string>
    <string name="enter_page">Enter Page</string>
    <string name="l_wait">Loading, please wait</string>
    <string name="dark_background">Dark Background</string>
    <string name="general">General</string>
    <string name="color">Color</string>
    <string name="listView_title">Search Results</string>
    <string name="to_be_done">To be done</string>
    <string name="q_main_background">is the main background dark?</string>
    <string name="connecting_server">Connecting to server</string>
    <string name="login_to_access">Log In to access this feature!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="Gender_array">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="UserType_array">
        <item>Regular</item>
        <item>Curator</item>
    </string-array>
    <string-array name="Lan_array">
        <item>English</item>
        <item>עברית</item>
        <item>العربيه</item>
    </string-array>
    <string-array name="entryvalues_list_preference">
        <item>English</item>
        <item>עברית</item>
        <item>العربيه</item>
    </string-array>
    <string-array name="searcharray">
        <item>Search By Title</item>
        <item>Search By Author</item>
    </string-array>


    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_sheet">Sheet</string>
    <string name="search_book">Book</string>
    <string name="sheet_title">Title</string>
    <string name="title_bold"><b>Title</b></string>
    <string name="publisher_bold"><b>Publisher</b></string>
    <string name="creationdate_bold"><b>Creation Date</b></string>
    <string name="source_bold"><b>Source</b></string>
    <string name="weblink_bold"><b>Web Link</b></string>
    <string name="author_bold"><b>Author</b></string>

    <string name="no_results_found">Sorry , No Results Found</string>
    <string name="fav_navigation_drawer_open">Open the menu</string>
    <string name="fav_navigation_drawer_close">Close menu</string>
    <string name="menu_save">Save</string>
    <string name="menu_favorite">Collect</string>
    <string name="menu_more">menu</string>
    <string name="menu_browser">Open the browser</string>
    <string name="search_map">Map</string>
    <string name="free_txt">free text</string>
    <string name="search_enter_author">Enter author</string>


</resources>
