<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/fav_action_favorite"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:orderInCategory="100"
        android:title="@string/menu_favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/fav_empty"
        android:orderInCategory="100"
        android:icon="@drawable/fav_ic_more_vert_white_24dp"
        app:showAsAction="always"
        android:title="@string/menu_more" >

        <menu>
            <item
                android:id="@+id/fav_action_browser"
                android:orderInCategory="100"
                android:title="@string/menu_browser"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>