<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/search_sheet_background"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25dp"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        </LinearLayout>
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"></FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.80"
            android:layoutAnimation="@anim/layoutanimation"
            android:orientation="vertical"
            android:weightSum="1">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@drawable/custom_spinner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="60dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_tag_bg"
                    android:fontFamily="sans-serif"
                    android:text="@string/search_map"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/title_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_enter_title"
                    android:imeOptions="actionGo"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fromyear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_tag_bg"
                    android:fontFamily="sans-serif"
                    android:text="@string/search_from_year"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/fromyear_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:inputType="number"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/toyear"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_tag_bg"
                    android:fontFamily="sans-serif"
                    android:text="@string/search_to_year"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/toYear_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:inputType="number"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/freetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_tag_bg"
                    android:fontFamily="sans-serif"
                    android:text="@string/free_txt"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/freetext_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionGo"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_weight="1" />

            </LinearLayout>


        </LinearLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"></FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="50dp"
        android:weightSum="1">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <Button
                android:id="@+id/searchbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/ripplesearch"
                android:onClick="searchfunct"
                android:text="@string/menu_search"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1" />
    </LinearLayout>

</LinearLayout>